# tvbingefriend-show-sync

./: .gitignore  LICENSE  README.md  function_app.py  host.json  pyproject.toml
.github/workflows/: azure-functions.yml
alembic/: env.py
alembic/versions/: a3afb58af752_initial_schema.py  ac8dbc14f439_initial_schema.py
tvbingefriend_show_sync/: config.py  utils.py
tvbingefriend_show_sync/blueprints/: bp_episodes.py  bp_seasons.py  bp_seasons_episodes.py  bp_shows.py  bp_update.py
tvbingefriend_show_sync/repositories/: database.py  episode_repo.py  season_repo.py  show_repo.py
tvbingefriend_show_sync/services/: episode_service.py  season_service.py  seasons_episodes_service.py  show_service.py  storage_service.py  update_service.py
